src/components/StickyNotes/_StickyNotes.scss
.sticky-notes {
    &__background {
        position: fixed;
        width: 100%;
        height: 100%;

        background-color: colors.$grey-3;

        overflow-y: auto;
        padding-bottom: 8rem;
    }
    h1 {
        padding: 0 1.8rem;
    }

    &__your-notes {
        h2 {
            padding: 0;
        }
        border-bottom: 1px solid colors.$grey-7;
        margin: 1.2rem;
        padding-bottom: 1.8rem;
        @include mixins.useFlex(row, space-between, center);
    }
    &__actions {
        display: grid;
        padding: 0.6rem 1.2rem 2.4rem 1.2rem;
        @include responsive.respond-to(lg) {
            grid-template-columns: 3fr 1.5fr;
            align-items: center;
            padding-bottom: 1.2rem;
        }

        background: colors.$white;

        .form-text-field,
        .select-box {
            margin: 1.2rem 0;
            @include responsive.respond-to(lg) {
                margin: 1.2rem 0.6rem;
            }
        }
    }

    &__grid-area {
        padding: 1.8rem;
        display: grid;
        @include responsive.respond-to(md) {
            grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
        }

        @include responsive.respond-to(lg) {
            grid-template-columns: repeat(auto-fit, minmax(20%, 1fr));
        }

        grid-gap: 0.6rem;
    }

    &__no-record-found {
        background: colors.$white;
        font-size: 2.4rem;
        @include mixins.useFlex(column, center);
        padding: 2.4rem;
    }
}

